--- a/_config.yml
+++ b/_config.yml
@@ -44,7 +44,7 @@ two_columns_layout: true
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://nanxi1234.github.io" # the base hostname & protocol for your site
 google_analytics: "UA-XXXXXXXX-X"
-language: "zh"
+language: "zh_CN"
 categories_folder: category
 sent_message_url: "/contact/message-sent/"
 
