--- a/_config.yml
+++ b/_config.yml
@@ -19,13 +19,13 @@ menu:
     url: /contact
   - title: Feed
     url: /feed.xml
-email: 932874770@qq.com
+email: youremail@test.com
 disqus_username: disqus_username
 
 
 # Social Media Settings
 # Remove the item if you don't need it
-github_username: nanxi1234
+github_username: github_username
 facebook_username: facebook_username
 twitter_username: twitter_username
 instagram_username: instagram_username
@@ -42,7 +42,7 @@ two_columns_layout: true
 
 # Advanced Settings
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://nanxi1234.github.io" # the base hostname & protocol for your site
+url: "https://nanxi1234.github,io" # the base hostname & protocol for your site
 google_analytics: "UA-XXXXXXXX-X"
 language: "en"
 categories_folder: category
