--- a/src/yml/_config.yml
+++ b/src/yml/_config.yml
@@ -16,11 +16,11 @@ markdown: kramdown
 highlighter: rouge
 permalink: /:title/
 collections:
-  authors:
+  authors:张朝晖
     output: true
 paginate_path: "/page/:num/"
 show_get_theme_btn: true
-use_logo: false
+use_logo: true
 
 # Content paginator
 paginate_content:
