--- a/_config.yml
+++ b/_config.yml
@@ -41,7 +41,7 @@ two_columns_layout: true
 
 # Advanced Settings
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://nanxi1234.github,io" # the base hostname & protocol for your site
+url: "https://nanxi1234.github.io" # the base hostname & protocol for your site
 google_analytics: "UA-XXXXXXXX-X"
 language: "en"
 categories_folder: category
@@ -60,7 +60,7 @@ show_get_theme_btn: true
 use_logo: false
 
 # Content paginator
-paginate_content:
+paginate_content: 
   enabled: true
   debug: false
   collections:
@@ -100,4 +100,4 @@ exclude: [
 ]
 
 # Theme
-version: 船新版本
+version: v3.1.0
