--- a/_config.yml
+++ b/_config.yml
@@ -53,7 +53,7 @@ markdown: kramdown
 highlighter: rouge
 permalink: /:title/
 collections:
-  authors: 张朝晖
+  authors:
     output: true
 paginate_path: "/page/:num/"
 show_get_theme_btn: true
