--- a/_config.yml
+++ b/_config.yml
@@ -49,7 +49,7 @@ sent_message_url: "/contact/message-sent/"
 
 
 # Build settings
-markdown: kramdown
+markdown: markdown
 highlighter: rouge
 permalink: /:title/
 collections:
