--- a/_config.yml
+++ b/_config.yml
@@ -16,12 +16,12 @@ minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt"
 
 # Site Settings
 locale                   : "en-US"
-title                    : "nanxi"
+title                    : "南夕"
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
 name                     : "南夕"
 description              : "An amazing website."
-url                      : "nanxi1234.github.io"# the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : "https://nanxi1234.github.io"# the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : nanxi1234/nanxi1234.github.io# GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : "/assets/images/500x300.png"# path of fallback teaser image, e.g. "/assets/images/500x300.png"
