--- a/_config.yml
+++ b/_config.yml
@@ -20,9 +20,9 @@ title                    : "南夕"
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
 name                     : "南夕"
-description              : "An amazing website."
+description              : "路漫漫其修远兮，吾将上下而求索"
 url                      : "https://nanxi1234.github.io"# the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
-baseurl                  : # the subpath of your site, e.g. "/blog"
+baseurl                  : ""# the subpath of your site, e.g. "/blog"
 repository               : nanxi1234/nanxi1234.github.io# GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : "/assets/images/500x300.png"# path of fallback teaser image, e.g. "/assets/images/500x300.png"
 logo                     : /assets/images/88x88.png# path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
