--- a/_config.yml
+++ b/_config.yml
@@ -39,9 +39,9 @@ comments:
     # https://developers.facebook.com/docs/plugins/comments
     appid                :
     num_posts            : # 5 (default)
-    colorscheme          : # "dark" (default), "dark"
+    colorscheme          : # "light" (default), "dark"
   utterances:
-    theme                : # "github-dark" (default), "github-dark"
+    theme                : # "github-light" (default), "github-dark"
     issue_term           : # "pathname" (default)
   staticman:
     branch               : # "master"
