--- a/_config.yml
+++ b/_config.yml
@@ -233,9 +233,9 @@ defaults: # 将所有配置选项使用<https://jekyllrb.com/docs/configuration/
                 href: /nanxi1234.github.io
               - title: '<i class="fas fa-comments fa-fw"></i> 留言'
                 href: /comments/
-              - title: '<i class="fas fa-tags fa-fw"></i> 标签'
+              - title: '<i class="fas fa-tags fa-fw"></i> 标签分类'
                 href: /tags/
-              - title: '<i class="fas fa-archive fa-fw"></i> 归档'
+              - title: '<i class="fas fa-archive fa-fw"></i> 我的博客'
                 href: /archive/
               - title: '<i class="fas fa-coffee fa-fw"></i> 打赏'
                 href: /merger/
