--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: 南夕 # 站点标题
 description: | # 头像背后的信息（html格式），<br/>代表换行
-  这个人很懒，什么都没写<br/>
+  这个人很懒，什么都没写
   ASC<br/>
   <a href="932874770@qq.com">
     <i class="fas fa-envelope"></i>
@@ -233,9 +233,9 @@ defaults: # 将所有配置选项使用<https://jekyllrb.com/docs/configuration/
                 href: /nanxi1234.github.io
               - title: '<i class="fas fa-comments fa-fw"></i> 留言'
                 href: /comments/
-              - title: '<i class="fas fa-tags fa-fw"></i> 标签分类'
+              - title: '<i class="fas fa-tags fa-fw"></i> 标签'
                 href: /tags/
-              - title: '<i class="fas fa-archive fa-fw"></i> 我的博客'
+              - title: '<i class="fas fa-archive fa-fw"></i> 归档'
                 href: /archive/
               - title: '<i class="fas fa-coffee fa-fw"></i> 打赏'
                 href: /merger/
