--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: 南夕 # 站点标题
 description: | # 头像背后的信息（html格式），<br/>代表换行
   这个人很懒，什么都没写
-  ASC<br/>
+  <br/>
   <a href="932874770@qq.com">
     <i class="fas fa-envelope"></i>
   </a>
@@ -26,7 +26,7 @@ description: | # 头像背后的信息（html格式），<br/>代表换行
     marginwidth="0"
     marginheight="0"
   ></iframe>
-url: https://nanxi1234.github.io
+url: "https://nanxi1234.github.io"
 baseurl: "" # 假如你的博客是建在某个目录下的，请在这里加上目录名，并且下面配置的所有链接里的`/assets`前也要加，即`/your_baseurl/assets`。这一项结尾不要有'/'。
 
 defaults: # 将所有配置选项使用<https://jekyllrb.com/docs/configuration/front-matter-defaults/>功能进行配置
@@ -595,7 +595,7 @@ defaults: # 将所有配置选项使用<https://jekyllrb.com/docs/configuration/
             enable: false
           count: true # 统计每个标签下文章的数量
           toc: # 在正文里显示一个标签的目录
-            enable: true
+            enable: false
         archive:
           group_by: "%b %Y" # 见<https://liquid.bootcss.com/filters/date/>
           posts_count:
@@ -605,7 +605,7 @@ defaults: # 将所有配置选项使用<https://jekyllrb.com/docs/configuration/
             enable: false
           year_count: true
           toc: # 在正文里显示一个归档的目录
-            enable: true
+            enable: false
         merger: # 打赏页，需要配置！
           append_to_head:
             - | # 需要配置的变量见<https://merger.justhx.com/cn/docs/configure>
