--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,7 @@
 title: 南夕
 description: | # 头像背后的信息（html格式），<br/>代表换行
   这个人很懒，什么都没写<br/>
+  ASC<br/>
   <a href="932874770@qq.com">
     <i class="fas fa-envelope"></i>
   </a>
