--- a/_config.yml
+++ b/_config.yml
@@ -233,9 +233,9 @@ defaults: # 将所有配置选项使用<https://jekyllrb.com/docs/configuration/
                 href: /nanxi1234.github.io
               - title: '<i class="fas fa-comments fa-fw"></i> 留言'
                 href: /comments/
-              - title: '<i class="fas fa-tags fa-fw"></i> 标签'
+              - title: '<i class="fas fa-tags fa-fw"></i> 标签分类'
                 href: /tags/
-              - title: '<i class="fas fa-archive fa-fw"></i> 归档'
+              - title: '<i class="fas fa-archive fa-fw"></i> Blog Article'
                 href: /archive/
               - title: '<i class="fas fa-coffee fa-fw"></i> 打赏'
                 href: /merger/
@@ -611,16 +611,14 @@ defaults: # 将所有配置选项使用<https://jekyllrb.com/docs/configuration/
             - | # 需要配置的变量见<https://merger.justhx.com/cn/docs/configure>
               <script>
                 var usage = "payment";
-                var wechat = "wxp://f2f0BhUoIC_9gex7-tC2PRvVuoA486mK5WyC";
-                var tenpay = "https://i.qianbao.qq.com/wallet/sqrcode.htm?m=tenpay&f=wallet&a=1&ac=CAEQ77zFwQMY-6u57gU%3D_xxx_sign&u=942759535&n=%E8%94%9A";
-                var alipay = "https://qr.alipay.com/fkx02750b5kbplxvudqrx16";
-                var paypal = "https://paypal.me/wukan0621";
-                var myname = "WuK";
-                var profile = "https://gravatar.loli.net/avatar/289efba375d63424de3c49569c446744?s=320";
+                var wechat = "wxp://f2f0-Dt9rUdfhkssx8HH03KeN_0xBAVz3q9c";
+                var alipay = "HTTPS://QR.ALIPAY.COM/FKX090889Z54SQITZLZSC6";
+                var myname = "张朝晖";
+                var profile = "https://user-images.githubusercontent.com/67684652/98087576-44632d00-1ebb-11eb-96d2-466bbd11c6f9.jpg";
                 var multilingual = true;
-                var myname_hans = "吴坎";
-                var myname_hant = "吴坎";
-                var myname_eng = "WuK";
+                var myname_hans = "张朝晖";
+                var myname_hant = "张朝晖";
+                var myname_eng = "Zhangzhaohui";
                 var title = "选择你的支付方式";
                 var subtitle = "跟随进一步的指示以向" + myname + "付款";
                 var qrcodeapi = "https://www.zhihu.com/qrcode?url=";
