--- a/_config.yml
+++ b/_config.yml
@@ -407,7 +407,7 @@ defaults: # 将所有配置选项使用<https://jekyllrb.com/docs/configuration/
                 <div>
                   <i class="fas fa-thumbs-up fa-fw"></i>
                   <a href="https://jekyll-theme-WuK.wu-kan.cn">
-                    jekyll-theme-WuK
+                    主题模板来源(●'◡'●)
                   </a>
                 </div>
               - | # Copyright声明
