--- a/_config.yml
+++ b/_config.yml
@@ -184,7 +184,7 @@ defaults: # 将所有配置选项使用<https://jekyllrb.com/docs/configuration/
                 h4,
                 h5,
                 h6 {
-                  font-family: PingFang SC, Menlo, Monaco, "Courier New", Microsoft JhengHei, monospace;
+                  font-family: 'Noto Serif SC', serif;
                 }
               </style>
             - | # 网页标题使用加粗字号
