--- a/_config.yml
+++ b/_config.yml
@@ -470,9 +470,36 @@ defaults: # 将所有配置选项使用<https://jekyllrb.com/docs/configuration/
           prism: # 代码高亮插件
             enable: true
             append: |
-              <link rel="stylesheet" href="/path/to/styles/default.css">
-              <script src="/path/to/highlight.min.js"></script>
-              <script>hljs.initHighlightingOnLoad();</script>
+              <link
+                rel="stylesheet"
+                href="https://cdn.jsdelivr.net/combine/npm/prismjs@1.22.0/plugins/line-numbers/prism-line-numbers.min.css,npm/prismjs@1.21.0/plugins/toolbar/prism-toolbar.min.css,npm/prismjs@1.21.0/plugins/match-braces/prism-match-braces.min.css,npm/prism-themes@1.4.0/themes/prism-nord.min.css"
+              />
+              <script
+                src="https://cdn.jsdelivr.net/combine/npm/prismjs@1.22.0/components/prism-core.min.js,npm/prismjs@1.21.0/plugins/autoloader/prism-autoloader.min.js,npm/prismjs@1.21.0/plugins/line-numbers/prism-line-numbers.min.js,npm/prismjs@1.21.0/plugins/toolbar/prism-toolbar.min.js,npm/prismjs@1.21.0/plugins/match-braces/prism-match-braces.min.js"
+                async="async"
+                data-autoloader-path="https://cdn.jsdelivr.net/npm/prismjs@1.22.0/components/"
+                onload='
+                  for(let x of document.getElementsByClassName("content"))
+                    x.classList.add("line-numbers","match-braces");
+                  Prism.plugins.toolbar.registerButton("select-code", function (env) {
+                    let button = document.createElement("button");
+                    button.textContent = "select this " + env.language;
+                    button.addEventListener("click", function () {
+                      if (document.body.createTextRange) {
+                        let range = document.body.createTextRange();
+                        range.moveToElementText(env.element);
+                        range.select();
+                      } else if (window.getSelection) {
+                        let selection = window.getSelection();
+                        let range = document.createRange();
+                        range.selectNodeContents(env.element);
+                        selection.removeAllRanges();
+                          selection.addRange(range);
+                      }
+                    });
+                    return button;
+                  })'
+              ></script>
           prepend:
             - | # 代码块过长自动折叠
               <style>
