--- a/_config.yml
+++ b/_config.yml
@@ -736,7 +736,7 @@ kramdown: # 见<https://kramdown.gettalong.org/options.html>
   input: GFM # 见<http://jekyllcn.com/docs/configuration/#kramdown>
   syntax_highlighter_opts: # 可见<https://kramdown.gettalong.org/syntax_highlighter/rouge.html>
     block:
-      disable: true # 关掉代码块默认的高亮，换用prismjs
+      disable: false # 关掉代码块默认的高亮，换用prismjs
       line_numbers: false #渲染出来的效果好鬼畜
     span:
       disable: true
