--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ description: | # 头像背后的信息（html格式），<br/>代表换行
   <a href="https://www.zhihu.com/people/zhang-zhao-hui-44-2">
     <i class="fab fa-zhihu"></i>
   </a>
-  <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.5.1/jquery.js"></script>
+      <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
       <script src="https://myhkw.cn/player/js/player.js" id="myhk" key="160456130852" m="1">
 </script>
 url: "https://nanxi1234.github.io"
