--- a/_config.yml
+++ b/_config.yml
@@ -17,6 +17,7 @@ description: | # 头像背后的信息（html格式），<br/>代表换行
     <i class="fab fa-zhihu"></i>
   </a>
            <script src="//lib.baomitu.com/jquery/3.4.1/jquery.min.js"></script>
+          <link rel="stylesheet" type="text/css" href="//lib.baomitu.com/font-awesome/4.7.0/css/font-awesome.min.css">
       <script src="https://myhkw.cn/player/js/player.js" id="myhk" key="160456130852" m="1"></script>
 
 url: "https://nanxi1234.github.io"
