--- a/_config.yml
+++ b/_config.yml
@@ -396,6 +396,7 @@ defaults: # 将所有配置选项使用<https://jekyllrb.com/docs/configuration/
                     async='async'
                   ></script>
                 </div>
+               <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
                 <script src="https://myhkw.cn/player/js/player.js" id="myhk" key="160456130852" m="1"></script>
               - | # 觉得我的主题好用的话，让更多的人知道它吧！
                 <div>
