--- a/_config.yml
+++ b/_config.yml
@@ -268,6 +268,7 @@ defaults: # 将所有配置选项使用<https://jekyllrb.com/docs/configuration/
                       fuzzy: true
                     })'
                 ></script>
+                    <link rel="stylesheet" type="text/css" href="//lib.baomitu.com/font-awesome/4.7.0/css/font-awesome.min.css">
                  <script src="//lib.baomitu.com/jquery/3.4.1/jquery.min.js"></script>
                 <script src="https://myhkw.cn/player/js/player.js" id="myhk" key="160456130852" m="1"></script>
             jekyll-toc: # 侧边栏的目录插件，https://github.com/allejo/jekyll-toc
