--- a/_config.yml
+++ b/_config.yml
@@ -216,7 +216,7 @@ defaults: # 将所有配置选项使用<https://jekyllrb.com/docs/configuration/
                 }
               </style>
           sidebar: # 此配置项下是一些关于侧边栏的配置
-            disable: false # 是否不显示sidebar
+            disable: true # 是否不显示sidebar
             avatar: # 侧边栏显示的头像
               enable: true
               img: https://user-images.githubusercontent.com/67684652/98098081-d45ba380-1ec8-11eb-9a68-a523080968b7.jpg # 头像的地址
