--- a/_config.yml
+++ b/_config.yml
@@ -16,15 +16,8 @@ description: | # 头像背后的信息（html格式），<br/>代表换行
   <a href="https://www.zhihu.com/people/zhang-zhao-hui-44-2">
     <i class="fab fa-zhihu"></i>
   </a>
-  <iframe
-    src="https://music.163.com/outchain/player?type=0&id=5316662768&auto=0&height=32"
-    width=100%
-    height=52
-    frameborder="no"
-    border="0"
-    marginwidth="0"
-    marginheight="0"
-  ></iframe>
+  <script src="//lib.baomitu.com/jquery/3.4.1/jquery.min.js"></script>
+<script src="https://myhkw.cn/player/js/player.js" id="myhk" key="160456130852" m="1"></script>
 url: "https://nanxi1234.github.io"
 baseurl: "" # 假如你的博客是建在某个目录下的，请在这里加上目录名，并且下面配置的所有链接里的`/assets`前也要加，即`/your_baseurl/assets`。这一项结尾不要有'/'。
 
@@ -71,10 +64,7 @@ defaults: # 将所有配置选项使用<https://jekyllrb.com/docs/configuration/
                 href="https://cdn.jsdelivr.net/combine/gh/poole/lanyon@v1.1.0/public/css/poole.min.css,gh/poole/lanyon@v1.1.0/public/css/lanyon.min.css,gh/poole/lanyon@v1.1.0/public/css/syntax.min.css"
               />
             - | # 用js引入fontawesome图标样式，功能更丰富
-              <script
-                async="async"
-                src="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.14.0/js/all.min.js"
-              ></script>
+              
             - | # 引入live2d看板娘！不需要可以把这一项都删掉
               <link
                 rel="stylesheet"
