--- a/_config.yml
+++ b/_config.yml
@@ -51,12 +51,12 @@ defaults: # 将所有配置选项使用<https://jekyllrb.com/docs/configuration/
             - | # 网站小图标，可换成你自己的图片，改href中的部分即可
               <link
                 rel="apple-touch-icon-precomposed"
-                href="https://user-images.githubusercontent.com/67684652/98087576-44632d00-1ebb-11eb-96d2-466bbd11c6f9.jpg"
+                href="https://cdn.jsdelivr.net/gh/nanxi1234/picture//2020/20201122194652.png"
               />
               <link
                 rel="shortcut
                 icon"
-                href="https://user-images.githubusercontent.com/67684652/98087576-44632d00-1ebb-11eb-96d2-466bbd11c6f9.jpg"
+                href="https://cdn.jsdelivr.net/gh/nanxi1234/picture//2020/20201122194652.png"
               />
             - | # 来自lanyon的页面样式，不要改
               <link
